# CGBV

./: .gitignore  CMakeLists.txt  Praktikum02_20150120.docx  Thumbs.db
A1_Bildverarbeitung/: CMakeLists.txt  FragmentShaderBewMit.glsl  FragmentShaderBrightness_Contrast.glsl  FragmentShaderDilatation.glsl  FragmentShaderErosion.glsl  FragmentShaderGauss3x3.glsl  FragmentShaderGauss5x5.glsl  FragmentShaderGauss5x5mod.glsl  FragmentShaderGauss7x7.glsl  FragmentShaderGauss7x7mod.glsl  FragmentShaderLaplace.glsl  FragmentShaderPassthrough.glsl  FragmentShaderSharpen.glsl  FragmentShaderSobel.glsl  ImageProcessing.cpp  Timer.cpp  Timer.h  VertexShader.glsl
A1_Versuch1b/: CMakeLists.txt  Versuch1b.cpp
A1_Versuch1c/: CMakeLists.txt  Versuch1c.cpp
A3_Normalenvektoren/: Aufgabe3.cpp  CMakeLists.txt  FragmentShader.glsl  VertexShader.glsl
Dependencies/: CMakeLists.txt
Dependencies/AntTweakBar/: CMakeLists.txt
Dependencies/AntTweakBar/src/: TwMgr.cpp  fxc.bat
Dependencies/FreeImage/: CMakeLists.txt
Dependencies/FreeImage/Source/: Plugin.h
Dependencies/FreeImage/Source/FreeImage/: Plugin.cpp
Dependencies/FreeImage/Source/LibTIFF/: tiffiop.h
Dependencies/GLTools/: CMakeLists.txt
Dependencies/GLTools/include/: GLBatch.h  GLShaderManager.h  GLTools.h  math3d.h
Dependencies/GLTools/src/: GLBatch.cpp  GLShaderManager.cpp  GLTools.cpp  GLTools.cpp.bak  math3d.cpp
Dependencies/freeglut/: CMakeLists.txt
Dependencies/glew/: CMakeLists.txt
ImageLoader/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h
Templates/: CMakeLists.txt
cmake/: CreateLaunchers.cmake  Dependencies.cmake  FindGLEW.cmake  Findfreeglut.cmake  Install.cmake
