project(FreeImage)
add_definitions(/D_CRT_SECURE_NO_WARNINGS)
set(FreeImage_SOURCES
	Source/CacheFile.h
	Source/DeprecationManager/Deprecated.cpp
	Source/DeprecationManager/DeprecationMgr.cpp
	Source/DeprecationManager/DeprecationMgr.h
	Source/FreeImage.h
	Source/FreeImage/BitmapAccess.cpp
	Source/FreeImage/CacheFile.cpp
	Source/FreeImage/ColorLookup.cpp
	Source/FreeImage/Conversion.cpp
	Source/FreeImage/Conversion16_555.cpp
	Source/FreeImage/Conversion16_565.cpp
	Source/FreeImage/Conversion24.cpp
	Source/FreeImage/Conversion32.cpp
	Source/FreeImage/Conversion4.cpp
	Source/FreeImage/Conversion8.cpp
	Source/FreeImage/ConversionRGBF.cpp
	Source/FreeImage/ConversionType.cpp
	Source/FreeImage/FreeImage.cpp
	Source/FreeImage/FreeImageIO.cpp
	Source/FreeImage/GetType.cpp
	Source/FreeImage/Halftoning.cpp
	Source/FreeImage/J2KHelper.cpp
	Source/FreeImage/MemoryIO.cpp
	Source/FreeImage/MultiPage.cpp
	Source/FreeImage/NNQuantizer.cpp
	Source/FreeImage/PSDParser.cpp
	Source/FreeImage/PSDParser.h
	Source/FreeImage/PixelAccess.cpp
	Source/FreeImage/Plugin.cpp
	Source/FreeImage/PluginBMP.cpp
	Source/FreeImage/PluginCUT.cpp
	Source/FreeImage/PluginDDS.cpp
	Source/FreeImage/PluginG3.cpp
	Source/FreeImage/PluginGIF.cpp
	Source/FreeImage/PluginHDR.cpp
	Source/FreeImage/PluginICO.cpp
	Source/FreeImage/PluginIFF.cpp
	Source/FreeImage/PluginJ2K.cpp
	Source/FreeImage/PluginJP2.cpp
	Source/FreeImage/PluginJPEG.cpp
	Source/FreeImage/PluginKOALA.cpp
	Source/FreeImage/PluginMNG.cpp
	Source/FreeImage/PluginPCD.cpp
	Source/FreeImage/PluginPCX.cpp
	Source/FreeImage/PluginPFM.cpp
	Source/FreeImage/PluginPICT.cpp
	Source/FreeImage/PluginPNG.cpp
	Source/FreeImage/PluginPNM.cpp
	Source/FreeImage/PluginPSD.cpp
	Source/FreeImage/PluginRAS.cpp
	Source/FreeImage/PluginRAW.cpp
	Source/FreeImage/PluginSGI.cpp
	Source/FreeImage/PluginTARGA.cpp
	Source/FreeImage/PluginTIFF.cpp
	Source/FreeImage/PluginWBMP.cpp
	Source/FreeImage/PluginXBM.cpp
	Source/FreeImage/PluginXPM.cpp
	Source/FreeImage/TIFFLogLuv.cpp
	Source/FreeImage/ToneMapping.cpp
	Source/FreeImage/WuQuantizer.cpp
	Source/FreeImage/ZLibInterface.cpp
	Source/FreeImage/tmoColorConvert.cpp
	Source/FreeImage/tmoDrago03.cpp
	Source/FreeImage/tmoFattal02.cpp
	Source/FreeImage/tmoReinhard05.cpp
	Source/FreeImageIO.h
	Source/FreeImageToolkit/BSplineRotate.cpp
	Source/FreeImageToolkit/Background.cpp
	Source/FreeImageToolkit/Channels.cpp
	Source/FreeImageToolkit/ClassicRotate.cpp
	Source/FreeImageToolkit/Colors.cpp
	Source/FreeImageToolkit/CopyPaste.cpp
	Source/FreeImageToolkit/Display.cpp
	Source/FreeImageToolkit/Filters.h
	Source/FreeImageToolkit/Flip.cpp
	Source/FreeImageToolkit/JPEGTransform.cpp
	Source/FreeImageToolkit/MultigridPoissonSolver.cpp
	Source/FreeImageToolkit/Rescale.cpp
	Source/FreeImageToolkit/Resize.cpp
	Source/FreeImageToolkit/Resize.h
	Source/LibJPEG/jaricom.c
	Source/LibJPEG/jcapimin.c
	Source/LibJPEG/jcapistd.c
	Source/LibJPEG/jcarith.c
	Source/LibJPEG/jccoefct.c
	Source/LibJPEG/jccolor.c
	Source/LibJPEG/jcdctmgr.c
	Source/LibJPEG/jchuff.c
	Source/LibJPEG/jcinit.c
	Source/LibJPEG/jcmainct.c
	Source/LibJPEG/jcmarker.c
	Source/LibJPEG/jcmaster.c
	Source/LibJPEG/jcomapi.c
	Source/LibJPEG/jconfig.h
	Source/LibJPEG/jcparam.c
	Source/LibJPEG/jcprepct.c
	Source/LibJPEG/jcsample.c
	Source/LibJPEG/jctrans.c
	Source/LibJPEG/jdapimin.c
	Source/LibJPEG/jdapistd.c
	Source/LibJPEG/jdarith.c
	Source/LibJPEG/jdatadst.c
	Source/LibJPEG/jdatasrc.c
	Source/LibJPEG/jdcoefct.c
	Source/LibJPEG/jdcolor.c
	Source/LibJPEG/jdct.h
	Source/LibJPEG/jddctmgr.c
	Source/LibJPEG/jdhuff.c
	Source/LibJPEG/jdinput.c
	Source/LibJPEG/jdmainct.c
	Source/LibJPEG/jdmarker.c
	Source/LibJPEG/jdmaster.c
	Source/LibJPEG/jdmerge.c
	Source/LibJPEG/jdpostct.c
	Source/LibJPEG/jdsample.c
	Source/LibJPEG/jdtrans.c
	Source/LibJPEG/jerror.c
	Source/LibJPEG/jerror.h
	Source/LibJPEG/jfdctflt.c
	Source/LibJPEG/jfdctfst.c
	Source/LibJPEG/jfdctint.c
	Source/LibJPEG/jidctflt.c
	Source/LibJPEG/jidctfst.c
	Source/LibJPEG/jidctint.c
	Source/LibJPEG/jinclude.h
	Source/LibJPEG/jmemmgr.c
	Source/LibJPEG/jmemnobs.c
	Source/LibJPEG/jmemsys.h
	Source/LibJPEG/jmorecfg.h
	Source/LibJPEG/jpegint.h
	Source/LibJPEG/jpeglib.h
	Source/LibJPEG/jquant1.c
	Source/LibJPEG/jquant2.c
	Source/LibJPEG/jutils.c
	Source/LibJPEG/jversion.h
	Source/LibJPEG/transupp.c
	Source/LibJPEG/transupp.h
	Source/LibMNG/libmng.h
	Source/LibMNG/libmng_callback_xs.c
	Source/LibMNG/libmng_chunk_descr.c
	Source/LibMNG/libmng_chunk_descr.h
	Source/LibMNG/libmng_chunk_io.c
	Source/LibMNG/libmng_chunk_io.h
	Source/LibMNG/libmng_chunk_prc.c
	Source/LibMNG/libmng_chunk_prc.h
	Source/LibMNG/libmng_chunk_xs.c
	Source/LibMNG/libmng_chunks.h
	Source/LibMNG/libmng_cms.c
	Source/LibMNG/libmng_cms.h
	Source/LibMNG/libmng_conf.h
	Source/LibMNG/libmng_data.h
	Source/LibMNG/libmng_display.c
	Source/LibMNG/libmng_display.h
	Source/LibMNG/libmng_dither.c
	Source/LibMNG/libmng_dither.h
	Source/LibMNG/libmng_error.c
	Source/LibMNG/libmng_error.h
	Source/LibMNG/libmng_filter.c
	Source/LibMNG/libmng_filter.h
	Source/LibMNG/libmng_hlapi.c
	Source/LibMNG/libmng_jpeg.c
	Source/LibMNG/libmng_jpeg.h
	Source/LibMNG/libmng_memory.h
	Source/LibMNG/libmng_object_prc.c
	Source/LibMNG/libmng_object_prc.h
	Source/LibMNG/libmng_objects.h
	Source/LibMNG/libmng_pixels.c
	Source/LibMNG/libmng_pixels.h
	Source/LibMNG/libmng_prop_xs.c
	Source/LibMNG/libmng_read.c
	Source/LibMNG/libmng_read.h
	Source/LibMNG/libmng_trace.c
	Source/LibMNG/libmng_trace.h
	Source/LibMNG/libmng_types.h
	Source/LibMNG/libmng_write.c
	Source/LibMNG/libmng_write.h
	Source/LibMNG/libmng_zlib.c
	Source/LibMNG/libmng_zlib.h
	Source/LibOpenJPEG/bio.c
	Source/LibOpenJPEG/bio.h
	Source/LibOpenJPEG/cio.c
	Source/LibOpenJPEG/cio.h
	Source/LibOpenJPEG/dwt.c
	Source/LibOpenJPEG/dwt.h
	Source/LibOpenJPEG/event.c
	Source/LibOpenJPEG/event.h
	Source/LibOpenJPEG/fix.h
	Source/LibOpenJPEG/image.c
	Source/LibOpenJPEG/image.h
	Source/LibOpenJPEG/int.h
	Source/LibOpenJPEG/j2k.c
	Source/LibOpenJPEG/j2k.h
	Source/LibOpenJPEG/j2k_lib.c
	Source/LibOpenJPEG/j2k_lib.h
	Source/LibOpenJPEG/jp2.c
	Source/LibOpenJPEG/jp2.h
	Source/LibOpenJPEG/jpt.c
	Source/LibOpenJPEG/jpt.h
	Source/LibOpenJPEG/mct.c
	Source/LibOpenJPEG/mct.h
	Source/LibOpenJPEG/mqc.c
	Source/LibOpenJPEG/mqc.h
	Source/LibOpenJPEG/openjpeg.c
	Source/LibOpenJPEG/openjpeg.h
	Source/LibOpenJPEG/opj_includes.h
	Source/LibOpenJPEG/opj_malloc.h
	Source/LibOpenJPEG/pi.c
	Source/LibOpenJPEG/pi.h
	Source/LibOpenJPEG/raw.c
	Source/LibOpenJPEG/raw.h
	Source/LibOpenJPEG/t1.c
	Source/LibOpenJPEG/t1.h
	Source/LibOpenJPEG/t1_luts.h
	Source/LibOpenJPEG/t2.c
	Source/LibOpenJPEG/t2.h
	Source/LibOpenJPEG/tcd.c
	Source/LibOpenJPEG/tcd.h
	Source/LibOpenJPEG/tgt.c
	Source/LibOpenJPEG/tgt.h
	Source/LibPNG/png.c
	Source/LibPNG/png.h
	Source/LibPNG/pngconf.h
	Source/LibPNG/pngerror.c
	Source/LibPNG/pnggccrd.c
	Source/LibPNG/pngget.c
	Source/LibPNG/pngmem.c
	Source/LibPNG/pngpread.c
	Source/LibPNG/pngread.c
	Source/LibPNG/pngrio.c
	Source/LibPNG/pngrtran.c
	Source/LibPNG/pngrutil.c
	Source/LibPNG/pngset.c
	Source/LibPNG/pngtrans.c
	Source/LibPNG/pngvcrd.c
	Source/LibPNG/pngwio.c
	Source/LibPNG/pngwrite.c
	Source/LibPNG/pngwtran.c
	Source/LibPNG/pngwutil.c
	Source/LibRawLite/internal/dcraw_common.cpp
	Source/LibRawLite/internal/dcraw_fileio.cpp
	Source/LibRawLite/internal/defines.h
	Source/LibRawLite/internal/libraw_internal_funcs.h
	Source/LibRawLite/internal/var_defines.h
	Source/LibRawLite/libraw/libraw.h
	Source/LibRawLite/libraw/libraw_alloc.h
	Source/LibRawLite/libraw/libraw_const.h
	Source/LibRawLite/libraw/libraw_datastream.h
	Source/LibRawLite/libraw/libraw_internal.h
	Source/LibRawLite/libraw/libraw_types.h
	Source/LibRawLite/libraw/libraw_version.h
	Source/LibRawLite/src/libraw_c_api.cpp
	Source/LibRawLite/src/libraw_cxx.cpp
	Source/LibTIFF/t4.h
	Source/LibTIFF/tif_aux.c
	Source/LibTIFF/tif_close.c
	Source/LibTIFF/tif_codec.c
	Source/LibTIFF/tif_color.c
	Source/LibTIFF/tif_compress.c
	Source/LibTIFF/tif_config.h
	Source/LibTIFF/tif_dir.c
	Source/LibTIFF/tif_dir.h
	Source/LibTIFF/tif_dirinfo.c
	Source/LibTIFF/tif_dirread.c
	Source/LibTIFF/tif_dirwrite.c
	Source/LibTIFF/tif_dumpmode.c
	Source/LibTIFF/tif_error.c
	Source/LibTIFF/tif_extension.c
	Source/LibTIFF/tif_fax3.c
	Source/LibTIFF/tif_fax3.h
	Source/LibTIFF/tif_fax3sm.c
	Source/LibTIFF/tif_flush.c
	Source/LibTIFF/tif_getimage.c
	Source/LibTIFF/tif_jpeg.c
	Source/LibTIFF/tif_luv.c
	Source/LibTIFF/tif_lzw.c
	Source/LibTIFF/tif_next.c
	Source/LibTIFF/tif_ojpeg.c
	Source/LibTIFF/tif_open.c
	Source/LibTIFF/tif_packbits.c
	Source/LibTIFF/tif_pixarlog.c
	Source/LibTIFF/tif_predict.c
	Source/LibTIFF/tif_predict.h
	Source/LibTIFF/tif_print.c
	Source/LibTIFF/tif_read.c
	Source/LibTIFF/tif_strip.c
	Source/LibTIFF/tif_swab.c
	Source/LibTIFF/tif_thunder.c
	Source/LibTIFF/tif_tile.c
	Source/LibTIFF/tif_version.c
	Source/LibTIFF/tif_warning.c
	Source/LibTIFF/tif_write.c
	Source/LibTIFF/tif_zip.c
	Source/LibTIFF/tiff.h
	Source/LibTIFF/tiffio.h
	Source/LibTIFF/tiffiop.h
	Source/LibTIFF/tiffvers.h
	Source/LibTIFF/uvcode.h
	Source/Metadata/Exif.cpp
	Source/Metadata/FIRational.cpp
	Source/Metadata/FIRational.h
	Source/Metadata/FreeImageTag.cpp
	Source/Metadata/FreeImageTag.h
	Source/Metadata/IPTC.cpp
	Source/Metadata/TagConversion.cpp
	Source/Metadata/TagLib.cpp
	Source/Metadata/XTIFF.cpp
	Source/Plugin.h
	Source/Quantizers.h
	Source/ToneMapping.h
	Source/Utilities.h
	Source/ZLib/adler32.c
	Source/ZLib/compress.c
	Source/ZLib/crc32.c
	Source/ZLib/crc32.h
	Source/ZLib/deflate.c
	Source/ZLib/deflate.h
	Source/ZLib/gzio.c
	Source/ZLib/infback.c
	Source/ZLib/inffast.c
	Source/ZLib/inffast.h
	Source/ZLib/inffixed.h
	Source/ZLib/inflate.c
	Source/ZLib/inflate.h
	Source/ZLib/inftrees.c
	Source/ZLib/inftrees.h
	Source/ZLib/trees.c
	Source/ZLib/trees.h
	Source/ZLib/uncompr.c
	Source/ZLib/zconf.h
	Source/ZLib/zconf.in.h
	Source/ZLib/zlib.h
	Source/ZLib/zutil.c
	Source/ZLib/zutil.h
)

# need include directories for FreeImage and all the sub libs
include_directories(Source)
include_directories(Source/FreeImageToolkit)
include_directories(Source/LibJPEG)
include_directories(Source/LibMNG)
include_directories(Source/LibOpenJPEG)
include_directories(Source/LibPNG)
include_directories(Source/LibRawLite)
include_directories(Source/LibTIFF)
include_directories(Source/OpenEXR)
include_directories(Source/OpenEXR/Half)
include_directories(Source/OpenEXR/Iex)
include_directories(Source/OpenEXR/IlmImf)
include_directories(Source/OpenEXR/IlmThread)
include_directories(Source/OpenEXR/Imath)
include_directories(Source/ZLib)

add_definitions(-DOPJ_STATIC -DLIBRAW_NODLL -DLIBRAW_LIBRARY_BUILD -DFREEIMAGE_LIB -DNO_LCMS)
add_library(FreeImage STATIC ${FreeImage_SOURCES})
SET_PROPERTY(TARGET FreeImage         PROPERTY FOLDER "Libraries")

set(FreeImage_INCLUDE_DIR "${FreeImage_SOURCE_DIR}/Source" CACHE PATH "" FORCE)
set(FreeImage_LIBRARY_DBG FreeImage CACHE STRING "" FORCE)
set(FreeImage_LIBRARY_REL FreeImage CACHE STRING "" FORCE)
mark_as_advanced(FreeImage_INCLUDE_DIR FreeImage_LIBRARY_DBG FreeImage_LIBRARY_REL)
